# fastapi-crud-app

./: analyze_code.sh  database.py  main.py  models.py  pyproject.toml  schemas.py  tables.py  todo.db
